--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -1,3 +1,25 @@
 .spacer{
   flex-grow: 1;
 }
+.main-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.post-container{
+  display: flex;
+  flex-direction: column;
+  padding: 4px;
+  margin: 4px;
+  border: 1px solid red;
+  width: 50%;
+}
+.details{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.selector-container{
+  padding-top: 20px;
+}
