--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -59,6 +59,15 @@
     <mat-card-content>
         {{post.selftext}}
     </mat-card-content>
+    <mat-card-actions> <!-- supposedly this will upvote or downvote the post depending if you are logged or not -->
+      <button mat-icon-button>
+        <mat-icon>thumb_up</mat-icon>
+      </button>
+      <span class="spacer"></span>
+      <button mat-icon-button>
+        <mat-icon>thumb_down</mat-icon>
+      </button>
+    </mat-card-actions>
     <mat-card-actions>
       <a mat-button href="{{post.url}}" target="_blank">URL</a>
       <a mat-button href="www.reddit.com{{post.permalink}}" target="_blank">PERMALINK</a>
